--- a/Helloworld.Rmd
+++ b/Helloworld.Rmd
@@ -2,7 +2,7 @@
 title: "Helloworld"
 author: "wxy"
 date: "2023-03-03"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
